# ArgsCovert

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.adoc  build.sh  config.yaml  config_min.yaml  test.sh
examples/: test.properties
src/: binary.rs  config.rs  lib.rs  main.rs  mod.rs  utils.rs  worker.rs
src/binary/: args_builder.rs
src/config/: about.txt  args.rs  prop.rs
src/utils/: command.rs  file.rs  log.rs  signal_hook.rs  string.rs
src/worker/: binary_worker.rs  script_worker.rs
