[package]
name = "args_covert"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/d7z-project/ArgsCovert"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.16", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
is_executable = "1.0.1"
nonblock = "0.2.0"
libc = "0.2"
chrono = "0.4"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }


[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
